# fullstack-test-task

./: .env.dev  Makefile  README.md  docker-compose.dev.yml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  entrypoint.sh  pyproject.toml  ruff.toml
backend/migrations/: env.py
backend/migrations/versions/: 2026-07-10-04-30-d435d591f1b4-add-file-table.py  2026-07-10-04-40-06d4d0dd11bc-add-alert-table.py
backend/src/: app.py  db_manager.py  models.py  schemas.py  settings.py  tasks.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  alert.py  file.py
backend/src/services/: alert.py  file.py
frontend/src/app/: page.tsx
